# voip-utility

./: .gitignore  .gitmodules  BUILD.md  LICENSE  README.md  meson.build  meson_options.txt
docs/: AUTOMATED_TESTING.md
examples/: audio_test.json  basic_call_test.json  bidirectional_audio_test.json  config-docker.json  config-tls-test.json  config.json  dtmf_test.json  ivr_navigation_test.json  run_all_tests.sh  voicemail_deposit_test.json
src/: main.c
src/audio/: analyzer.c  analyzer.h  audio_port.c  audio_port.h  beep_detector.c  beep_detector.h  player.c  player.h  recorder.c  recorder.h
src/cli/: cli.c  cli.h  cmd_analyze.c  cmd_call.c  cmd_interactive.c  cmd_receive.c  cmd_register.c  cmd_test.c
src/config/: config.c  config.h
src/core/: account.c  account.h  call.c  call.h  dtmf.c  dtmf.h  media.c  media.h  sip_ua.c  sip_ua.h
src/test/: action_executor.c  action_executor.h  condition_eval.c  condition_eval.h  event_system.c  event_system.h  test_engine.c  test_engine.h  test_parser.c  test_parser.h
src/util/: error.c  error.h  json_output.c  json_output.h  log.c  log.h  time_util.c  time_util.h
subprojects/: cjson.wrap
subprojects/packagefiles/cjson/: meson.build
tests/: 01_basic_connection.json  02_dtmf_send_receive.json  03_dtmf_bidirectional.json  04_audio_playback_beep_detect.json  05_single_beep_detect.json  06_multiple_frequencies.json  07_complex_flow_dtmf_then_audio.json  08_expect_beeps_then_dtmf.json  09_bidirectional_audio.json  10_long_duration_call.json  11_rapid_dtmf_sequence.json  12_silence_detection.json  13_tls_open_tier_call.json  14_tls_medium_tier_call.json  15_tls_strict_tier_call.json  16_tls_cross_tier_open_to_strict.json  17_tls_negative_tests.sh  beep_test.json  meson.build  run_test_suite.sh  setup_test_env.sh
